[MT-5208] Fix table heading alignment

--- a/src/elements/Table/Table.scss
+++ b/src/elements/Table/Table.scss
@@ -23,6 +23,8 @@
     min-height: 40px;
     padding: $spacing-1-5;
     outline: none !important;
+    text-align: left;
+    vertical-align: middle;
 
     > *:first-child {
         margin-top: 0;
